--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+body {
+    height: 100vh;
+    font-family: 'Roboto Mono', monospace;
+    display: flex;
+    flex-direction: column;
+    padding: 0 5rem 0 5rem;
+}
+.main {
+    flex: 1 0 auto; 
+}
+.btn{
+    width: 10rem;
+    font-family: 'Roboto Mono', monospace;;
+    border: 0;
+    padding: 10px;
+    margin: 15px 0px 15px 0px;
+    cursor: pointer;
+}
 .card img {
-    height: 30vh;
+    height: 20vh;
+}
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+footer {
+    flex-shrink: 0;
+    text-align: center;
+    width: 100%;
+    height: 2.5rem;    
+    font-size: 10px;
 }
