--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 .btn{
     width: 10rem;
-    font-family: 'Roboto Mono', monospace;;
+    font-family: 'Roboto Mono', monospace;
     border: 0;
     padding: 10px;
     margin: 15px 0px 15px 0px;
@@ -32,4 +32,8 @@ footer {
     width: 100%;
     height: 2.5rem;    
     font-size: 10px;
+}
+.warning-mes {
+    font-size: 0.7rem;
+    color: rgb(230, 137, 137);
 }
